--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "use-intl": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "sass": "^1.49.9"
   }
 }
