--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "use-intl": "^2.4.0",
     "web-vitals": "^2.1.4"
