--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.33.2",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
@@ -23,6 +24,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
     "use-intl": "^2.4.0",
     "web-vitals": "^2.1.4"
