--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "http-proxy-middleware": "^2.0.4",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-data-table-component": "^7.4.7",
@@ -25,8 +26,8 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-toastify": "^8.2.0",
     "react-select": "^5.2.2",
+    "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "use-intl": "^2.4.0",
