--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
