--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.3",
     "use-intl": "^2.4.0",
     "web-vitals": "^2.1.4"
