--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react-icons": "^4.3.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "react-use-websocket": "^4.2.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.3",
     "use-intl": "^2.4.0",
