fixed inconsistencies of packages and docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,5 @@ services:
         - CHOKIDAR_USEPOLLING=true
       build:
         dockerfile: Dockerfile
-        context: ./client
+        # context: ./client
+        context: .
