--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "react-slideshow-image": "^4.2.1",
+    "react-tinder-card": "^1.6.2",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "react-typical": "^0.1.3",
