--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop, main ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop, main ]
 
 jobs:
   build:
@@ -19,13 +19,13 @@ jobs:
         node-version: '16.x'
         cache: 'npm'
 
-    - name: Build
-      run: docker build . -t ghcr.io/mjavadmt/saku:${{ github.sha }}
+    # - name: Build
+    #   run: docker build . -t ghcr.io/mjavadmt/saku:${{ github.sha }}
 
-    - name: push
-      run: |
-        docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
-        docker push ghcr.io/mjavadmt/saku:${{ github.sha }}
+    # - name: push
+    #   run: |
+    #     docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
+    #     docker push ghcr.io/mjavadmt/saku:${{ github.sha }}
 
   test:
     runs-on: ubuntu-latest
@@ -35,8 +35,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run Tests
+      # run: |
+      #   docker run -e CI=true ghcr.io/mjavadmt/saku:$TAG /bin/sh -c "npm test -- --coverage"
       run: |
-        docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
-        export TAG=${{ github.sha }}
-        docker pull ghcr.io/mjavadmt/saku:$TAG
-        docker run -e CI=true ghcr.io/mjavadmt/saku:$TAG /bin/sh -c "npm test -- --coverage"
+        docker-compose -f docker-compose.test.yml run client
