revert branches-ignore

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,14 +1,14 @@
 name: CI
 
 on:
-  # push:
-  #   branches: [ Develoop, main ]
-  # pull_request:
-  #   branches: [ Develoop, main ]
   push:
-    branches-ignore:
-    - Develoop
-    - main
+    branches: [ Develoop, main ]
+  pull_request:
+    branches: [ Develoop, main ]
+  # push:
+  #   branches-ignore:
+  #   - Develoop
+  #   - main
 
 jobs:
   build:
