--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
   #   - main
 
 jobs:
-  # build:
+  build:
 
   #   runs-on: ubuntu-latest
   #       # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
@@ -23,8 +23,8 @@ jobs:
   #       node-version: '16.x'
   #       cache: 'npm'
 
-    # - name: Build
-    #   run: docker build . -t ghcr.io/mjavadmt/saku:${{ github.sha }}
+    - name: Build
+      run: docker build . -t ghcr.io/sakue-se/saku-frontend:testing
 
     # - name: push
     #   run: |
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Run Tests
-      # run: |
-      #   docker run -e CI=true ghcr.io/mjavadmt/saku:$TAG /bin/sh -c "npm test -- --coverage"
       run: |
-        docker-compose -f docker-compose.test.yml run client
+        docker run -e CI=true ghcr.io/saku-se/saku-frontend:testing /bin/sh -c "npm test -- --coverage"
+      # run: |
+      #   docker-compose -f docker-compose.test.yml run client
