--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,15 +13,15 @@ on:
 jobs:
   build:
 
-  #   runs-on: ubuntu-latest
-  #       # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    runs-on: ubuntu-latest
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v2
-  #     with:
-  #       node-version: '16.x'
-  #       cache: 'npm'
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16.x'
+        cache: 'npm'
 
     - name: Build
       run: docker build . -t ghcr.io/sakue-se/saku-frontend:testing
