--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,10 +11,29 @@ on:
   #   - main
 
 jobs:
-  build:
+  # build:
 
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    # steps:
+    # - uses: actions/checkout@v2
+    # - uses: actions/setup-node@v2
+    #   with:
+    #     node-version: '16.x'
+    #     cache: 'npm'
+
+    # - name: Build
+    #   run: docker build . -t ghcr.io/sakue-se/saku-frontend:testing
+
+    # - name: push
+    #   run: |
+    #     docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
+    #     docker push ghcr.io/mjavadmt/saku:${{ github.sha }}
+
+  test:
+    runs-on: ubuntu-latest
+    # needs: build
 
     steps:
     - uses: actions/checkout@v2
@@ -25,18 +44,6 @@ jobs:
 
     - name: Build
       run: docker build . -t ghcr.io/sakue-se/saku-frontend:testing
-
-    # - name: push
-    #   run: |
-    #     docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
-    #     docker push ghcr.io/mjavadmt/saku:${{ github.sha }}
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/checkout@v2
 
     - name: Run Tests
       run: |
