--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
     #     docker login --username=${{ secrets.REGISTRY_USERNAME }} --password=${{ secrets.PAT }} ghcr.io
     #     docker push ghcr.io/mjavadmt/saku:${{ github.sha }}
 
-  test:
+  build_and_test:
     runs-on: ubuntu-latest
     # needs: build
 
@@ -43,7 +43,7 @@ jobs:
         cache: 'npm'
 
     - name: Build
-      run: docker build . -t ghcr.io/sakue-se/saku-frontend:testing
+      run: docker build . -t ghcr.io/saku-se/saku-frontend:testing
 
     - name: Run Tests
       run: |
