--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-slideshow-image": "^4.2.1",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "react-use-websocket": "^4.2.0",
