--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,9 +3,9 @@ name: CD
 on:
   workflow_run:
     workflows: [image-release]
-    branches-ignore:
-      - main
-      - Develoop
+    # branches-ignore:
+    #   - main
+    #   - Develoop
     types:
       - completed
 
