--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,6 +6,7 @@ on:
     # branches-ignore:
     #   - main
     #   - Develoop
+    branches: [feature/v.0.0.4/release_CD]
     types:
       - completed
 
