--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "react-slideshow-image": "^4.2.1",
-    "react-tinder-card": "^1.6.2",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
+    "react-typical": "^0.1.3",
     "react-use-websocket": "^4.2.0",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.3",
@@ -44,7 +45,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
