--- a/.github/workflows/image_release.yml
+++ b/.github/workflows/image_release.yml
@@ -1,10 +1,11 @@
 name: image-release
 
 on:
-  push:
-    branches_ignore:
-    - main
-    - Develoop
+  workflow_run:
+    workflows: [CI]
+    branches: [main]
+    types:
+      - completed
   
 jobs:
   build-and-push-image:
