--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@devexpress/dx-react-core": "^3.0.2",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.33.2",
     "axios": "^0.26.1",
